samples/_failures_safe/1761096812_8cc5c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39f16e74.c: In function ‘main’:
./samples/SAFE/__tmp_39f16e74.c:138:5: error: expected declaration or statement at end of input
  138 |     display_entries_by_level(&analyzer, "ERROR");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
